Fix navbar overflowing

--- a/styles/react-search-select.css
+++ b/styles/react-search-select.css
@@ -1,5 +1,5 @@
 .select-search {
-  width: 140px;
+  width: 135px;
 }
 
 .select-search:not(.select-search--multiple) .select-search__input:hover {
